# poetry_test_pj

./: README.rst  pyproject.toml
tests/: test_poetry_test_pj.py
