[tool.poetry]
name = "poetry_test_pj"
version = "0.1.0"
description = ""
authors = ["GtTmy <tomoya.gotoh.wind@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7 || ^3.7"

[tool.poetry.dev-dependencies]
pytest = [
    {version="^4.6.11", python="^2.7"},
    {version="^6.2.0", python="^3.7"}
]
pytest-mock = [
    {version="^1.13.0", python="^2.7"},
    {version="^3.6.1", python="^3.7"}
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
